Fix scroll jump and reduce code by removing scroll-snap and hacks

--- a/content/styles/main.css
+++ b/content/styles/main.css
@@ -192,10 +192,6 @@ html {
   scroll-behavior: smooth;
 }
 
-.snap-page {
-  scroll-snap-type: y mandatory;
-}
-
 body {
   width: 100%;
   overflow-x: hidden;
